[package]
authors = ["Cole Lawrence <cole@colelawrence.com>", "Story.ai Team <team@story.ai>"]
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "no-std",
  "wasm",
]
description = "tracing subscriber for browser WASM"
edition = "2018"
exclude = ["*.png"]
keywords = ["logging", "metrics", "wasm", "spans", "tracing"]
license = "MIT OR Apache-2.0"
name = "tracing-wasm"
readme = "README.md"
repository = "https://github.com/storyai/tracing-wasm"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = {version = "1.5", optional = true}
tracing = {version = "0.1", features = ["attributes"], default-features = false}
tracing-subscriber = {version = "0.2", features = ["registry"], default-features = false}
wasm-bindgen = {version = "0.2"}
chrono = { version = "^0.4", features = ["wasmbind"] }

[features]
mark-with-rayon-thread-index = ["rayon"]
